# gptj-rs

./: Cargo.toml  LICENSE  readme.md
ggml-raw/: readme.md
ggml-raw/src/: lib.rs
gptj-cli/: Cargo.toml
gptj-cli/src/: cli_args.rs  main.rs
gptj-rs/: Cargo.toml
gptj-rs/src/: ggml.rs  lib.rs
