[package]
name = "gptj-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A GPT-J inference library written in Rust"
homepage = "https://github.com/techchrism/gptj-rs"
repository = "https://github.com/techchrism/gptj-rs.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13.1"
ggml-raw = { version = "0.1.0", path = "../ggml-raw" }
partial_sort = "0.2.0"
rand = "0.8.5"
thiserror = "1.0.39"
fancy-regex = "0.11.0"
